--- a/src/app/pages/feature/manage/feature-subscription/feature-subscription.page.scss
+++ b/src/app/pages/feature/manage/feature-subscription/feature-subscription.page.scss
@@ -10,7 +10,7 @@ app-feature-subscription {
     padding-bottom: 10px;
   }
 
-  ion-slides {
+  swiper-container {
     width: 100%;
   }
 
@@ -18,7 +18,7 @@ app-feature-subscription {
     width: 100%;
   }
 
-  ion-slide {
+  swiper-slide {
     width: 100%;
   }
 
