--- a/src/app/pages/manage/designsystem/designsystem.page.html
+++ b/src/app/pages/manage/designsystem/designsystem.page.html
@@ -246,8 +246,8 @@
             <ion-item class="section" lines="none"> <!--section header-->
               <ion-label class="section-label" color="darkgrey">Category Name</ion-label>
             </ion-item>
-            <ion-slides class="program-slides" [options]="{slidesPerView: 1, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
-              <ion-slide class="program-slide">
+            <swiper-container class="program-slides" [options]="{slidesPerView: 1, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -256,8 +256,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 1</div>
                 </ion-card>
-              </ion-slide>
-              <ion-slide class="program-slide">
+              </swiper-slide>
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -266,8 +266,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 2</div>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
                 <ion-col class="ion-align-self-center" size="auto">
@@ -299,8 +299,8 @@
             <ion-item class="section" lines="none"> <!--section header-->
               <ion-label class="section-label" color="darkgrey">Category Name</ion-label>
             </ion-item>
-            <ion-slides class="program-slides" [options]="{slidesPerView: 1, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
-              <ion-slide class="program-slide">
+            <swiper-container class="program-slides" [options]="{slidesPerView: 1, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -309,8 +309,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 1</div>
                 </ion-card>
-              </ion-slide>
-              <ion-slide class="program-slide">
+              </swiper-slide>
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -319,8 +319,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 2</div>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
                 <ion-col class="ion-align-self-center" size="auto">
@@ -352,8 +352,8 @@
             <ion-item class="section" lines="none"> <!--section header-->
               <ion-label class="section-label" color="darkgrey">Category Name</ion-label>
             </ion-item>
-            <ion-slides class="program-slides" [options]="{slidesPerView: 1, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
-              <ion-slide class="program-slide">
+            <swiper-container class="program-slides" [options]="{slidesPerView: 1, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -362,8 +362,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 1</div>
                 </ion-card>
-              </ion-slide>
-              <ion-slide class="program-slide">
+              </swiper-slide>
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -372,8 +372,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 2</div>
                 </ion-card>
-              </ion-slide>
-              <ion-slide class="program-slide">
+              </swiper-slide>
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -382,8 +382,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 3</div>
                 </ion-card>
-              </ion-slide>
-              <ion-slide class="program-slide">
+              </swiper-slide>
+              <swiper-slide class="program-slide">
                 <ion-card class="program-card">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -392,8 +392,8 @@
                   </ion-card-header>
                   <div class="program-name">Object 4</div>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
                 <ion-col class="ion-align-self-center" size="auto">
