--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -227,8 +227,8 @@
             </div>
 
             <!--Learning Mobile View-->
-            <ion-slides class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="journeys && journeys.length && platform.width() < 768">
-              <ion-slide class="program-slide" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
+            <swiper-container class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="journeys && journeys.length && platform.width() < 768">
+              <swiper-slide class="program-slide" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
                 <ion-card class="program-card" (click)="openProgram($event, journey)">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -237,8 +237,8 @@
                   </ion-card-header>
                   <div class="program-name">{{journey.matrix_string[0][0]}}</div>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <!--Learning Desktop View-->
             <ion-grid *ngIf="journeys && journeys.length && platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
@@ -294,8 +294,8 @@
             </div>-->
 
             <!--Mentors Mobile View-->
-            <ion-slides class="relationship-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 129, grabCursor: true, updateOnWindowResize: true}" *ngIf="myMentors && myMentors.length && platform.width() < 768">
-              <ion-slide class="relationship-slide" *ngFor="let relationship of myMentors; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
+            <swiper-container class="relationship-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 129, grabCursor: true, updateOnWindowResize: true}" *ngIf="myMentors && myMentors.length && platform.width() < 768">
+              <swiper-slide class="relationship-slide" *ngFor="let relationship of myMentors; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
                 <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
                   <ion-card-header class="ion-no-padding ion-justify-content-center">
                     <div class="relationship-photo-container">
@@ -320,8 +320,8 @@
                     </ion-row>
                   </ion-card-content>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <!--Mentors Desktop View-->
             <ion-grid *ngIf="myMentors && myMentors.length && platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
@@ -393,8 +393,8 @@
             </div>-->
 
             <!--Mentees Mobile View-->
-            <ion-slides class="relationship-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 129, grabCursor: true, updateOnWindowResize: true}" *ngIf="myMentees && myMentees.length && platform.width() < 768">
-              <ion-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
+            <swiper-container class="relationship-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 129, grabCursor: true, updateOnWindowResize: true}" *ngIf="myMentees && myMentees.length && platform.width() < 768">
+              <swiper-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
                 <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
                   <ion-card-header class="ion-no-padding">
                     <div class="relationship-photo-container ion-justify-content-center">
@@ -419,8 +419,8 @@
                     </ion-row>
                   </ion-card-content>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <!--Mentees Desktop View-->
             <ion-grid *ngIf="myMentees && myMentees.length && platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
@@ -491,8 +491,8 @@
             </div>
 
             <!--Group Mobile View-->
-            <ion-slides class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="groups && groups.length && platform.width() < 768">
-              <ion-slide class="program-slide" *ngFor="let group of groups; trackBy: customTrackBy" [hidden]="!((group.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || group.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
+            <swiper-container class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="groups && groups.length && platform.width() < 768">
+              <swiper-slide class="program-slide" *ngFor="let group of groups; trackBy: customTrackBy" [hidden]="!((group.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || group.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
                 <ion-card class="program-card" (click)="openProgram($event, group)">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -501,8 +501,8 @@
                   </ion-card-header>
                   <div class="program-name">{{group.matrix_string[0][0]}}</div>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <!--Group Desktop View-->
             <ion-grid *ngIf="groups && groups.length && platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
@@ -529,8 +529,8 @@
                 <ion-icon name="add"></ion-icon>
               </ion-button>
             </ion-item>
-            <ion-slides class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
-              <ion-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
+            <swiper-container class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+              <swiper-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
                 <ion-card class="program-card" (click)="openProgram($event, program)">
                   <ion-card-header class="ion-no-padding">
                     <div class="program-photo-container">
@@ -539,8 +539,8 @@
                   </ion-card-header>
                   <div class="program-name">{{program.matrix_string[0][0]}}</div>
                 </ion-card>
-              </ion-slide>
-            </ion-slides>
+              </swiper-slide>
+            </swiper-container>
             <ion-grid *ngIf="platform.width() >= 768">
               <ion-row class="ion-justify-content-start">
                 <ion-col class="ion-align-self-center" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))" size="auto">
