--- a/src/app/pages/user/register/register.page.scss
+++ b/src/app/pages/user/register/register.page.scss
@@ -1,11 +1,11 @@
 app-register {
 
-  ion-slides {
+  swiper-container {
     max-width: 600px;
     height: 100%;
   }
 
-  ion-slide {
+  swiper-slide {
     height: 100%;
   }
 
