--- a/src/app/pages/feature/createcommunity/createcommunity.page.html
+++ b/src/app/pages/feature/createcommunity/createcommunity.page.html
@@ -8,9 +8,9 @@
 </ion-header>
 
 <ion-content *ngIf="resource && resource._id && moment && moment.resource && moment.resource.field && moment.resource.matrix_number.length && moment.matrix_string && moment.matrix_string.length">
-  <ion-slides (ionSlideWillChange)="changeSlide('create')" pager *ngIf="view === 'create'">
+  <swiper-container id="swiper" (slidechangetransitionstart)="changeSlide('create')" pager *ngIf="view === 'create'">
     <!--Collect Community Name-->
-    <ion-slide *ngIf="moment.resource.matrix_number[0].indexOf(10000) > -1">
+    <swiper-slide *ngIf="moment.resource.matrix_number[0].indexOf(10000) > -1">
       <ion-grid class="slide-grid">
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col>
@@ -24,8 +24,8 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </ion-slide>
-    <ion-slide>
+    </swiper-slide>
+    <swiper-slide>
       <ion-grid class="slide-grid">
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col class="ion-align-self-center">
@@ -62,8 +62,8 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </ion-slide>
-    <ion-slide> <!--Edit Form-->
+    </swiper-slide>
+    <swiper-slide> <!--Edit Form-->
       <ion-grid class="slide-grid">
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col>
@@ -142,12 +142,12 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </ion-slide>
-  </ion-slides>
+    </swiper-slide>
+  </swiper-container>
   <!--Community Tutorial-->
-  <ion-slides [options]="slidesOpts" (ionSlideWillChange)="changeSlide('tutorial')" (ionSlidesDidLoad)="loadedTutorialSlides()" pager *ngIf="view === 'tutorial' && moment._id">
+  <swiper-container [options]="slidesOpts" (ionSlideWillChange)="changeSlide('tutorial')" (ionSlidesDidLoad)="loadedTutorialSlides()" pager *ngIf="view === 'tutorial' && moment._id">
     <!--Manage Users-->
-    <ion-slide>
+    <swiper-slide>
       <ion-grid class="slide-grid">
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-col class="ion-align-self-center">
@@ -181,15 +181,15 @@
           </ion-col>
         </ion-row>
       </ion-grid>
-    </ion-slide>
-    <ion-slide>
+    </swiper-slide>
+    <swiper-slide>
       <ion-grid class="slide-grid">
         <ion-row class="ion-justify-content-center ion-align-items-center slide-row">
           <ion-item lines="none">Congratulations! You have completed the set up process for {{moment.matrix_string[0][0]}}.</ion-item>
         </ion-row>
       </ion-grid>
-    </ion-slide>
-  </ion-slides>
+    </swiper-slide>
+  </swiper-container>
   <ion-grid style="height: 100%" *ngIf="ionSpinner">
     <ion-row class="ion-align-items-center" style="height: 25px">
       <ion-spinner name="dots"></ion-spinner>
