upgrade to Angular 14, replace ion-slides with swiper-container

--- a/src/app/pages/feature/createcommunity/createcommunity.page.html
+++ b/src/app/pages/feature/createcommunity/createcommunity.page.html
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content *ngIf="resource && resource._id && moment && moment.resource && moment.resource.field && moment.resource.matrix_number.length && moment.matrix_string && moment.matrix_string.length">
-  <swiper-container id="swiper" (slidechangetransitionstart)="changeSlide('create')" pager *ngIf="view === 'create'">
+  <swiper-container id="swiper" (slidechangetransitionstart)="changeSlide('create')" pager *ngIf="view === 'create'" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]="true" [updateOnWindowResize]="true">
     <!--Collect Community Name-->
     <swiper-slide *ngIf="moment.resource.matrix_number[0].indexOf(10000) > -1">
       <ion-grid class="slide-grid">
@@ -145,7 +145,7 @@
     </swiper-slide>
   </swiper-container>
   <!--Community Tutorial-->
-  <swiper-container [options]="slidesOpts" (ionSlideWillChange)="changeSlide('tutorial')" (ionSlidesDidLoad)="loadedTutorialSlides()" pager *ngIf="view === 'tutorial' && moment._id">
+  <swiper-container (ionSlideWillChange)="changeSlide('tutorial')" (ionSlidesDidLoad)="loadedTutorialSlides()" pager *ngIf="view === 'tutorial' && moment._id" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]="true" [updateOnWindowResize]="true">
     <!--Manage Users-->
     <swiper-slide>
       <ion-grid class="slide-grid">
