--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -227,7 +227,7 @@
             </div>
 
             <!--Learning Mobile View-->
-            <swiper-container class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="journeys && journeys.length && platform.width() < 768">
+            <swiper-container class="program-slides" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]="true" [updateOnWindowResize]="true" [slidesOffsetAfter]="this.platform.width() - 150" *ngIf="journeys && journeys.length && platform.width() < 768">
               <swiper-slide class="program-slide" *ngFor="let journey of journeys; trackBy: customTrackBy" [hidden]="!((journey.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || journey.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
                 <ion-card class="program-card" (click)="openProgram($event, journey)">
                   <ion-card-header class="ion-no-padding">
@@ -294,7 +294,7 @@
             </div>-->
 
             <!--Mentors Mobile View-->
-            <swiper-container class="relationship-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 129, grabCursor: true, updateOnWindowResize: true}" *ngIf="myMentors && myMentors.length && platform.width() < 768">
+            <swiper-container class="relationship-slides" [slidesPerView]="'auto'" [grabCursor]="true" [updateOnWindowResize]="true" [slidesOffsetAfter]="this.platform.width() - 150" *ngIf="myMentors && myMentors.length && platform.width() < 768">
               <swiper-slide class="relationship-slide" *ngFor="let relationship of myMentors; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
                 <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
                   <ion-card-header class="ion-no-padding ion-justify-content-center">
@@ -393,7 +393,7 @@
             </div>-->
 
             <!--Mentees Mobile View-->
-            <swiper-container class="relationship-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 129, grabCursor: true, updateOnWindowResize: true}" *ngIf="myMentees && myMentees.length && platform.width() < 768">
+            <swiper-container class="relationship-slides" [slidesPerView]="'auto'" [grabCursor]="true" [updateOnWindowResize]="true" [slidesOffsetAfter]="this.platform.width() - 129"  *ngIf="myMentees && myMentees.length && platform.width() < 768">
               <swiper-slide class="relationship-slide" *ngFor="let relationship of myMentees; trackBy: customTrackBy;" [hidden]="!(relationship.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || relationship.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase()))">
                 <ion-card class="relationship-card" (click)="openProgram($event, relationship)">
                   <ion-card-header class="ion-no-padding">
@@ -491,7 +491,7 @@
             </div>
 
             <!--Group Mobile View-->
-            <swiper-container class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="groups && groups.length && platform.width() < 768">
+            <swiper-container class="program-slides" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]="true" [updateOnWindowResize]="true" [slidesOffsetAfter]="this.platform.width() - 150"  *ngIf="groups && groups.length && platform.width() < 768">
               <swiper-slide class="program-slide" *ngFor="let group of groups; trackBy: customTrackBy" [hidden]="!((group.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || group.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
                 <ion-card class="program-card" (click)="openProgram($event, group)">
                   <ion-card-header class="ion-no-padding">
@@ -529,7 +529,7 @@
                 <ion-icon name="add"></ion-icon>
               </ion-button>
             </ion-item>
-            <swiper-container class="program-slides" [options]="{slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 150, grabCursor: true, updateOnWindowResize: true}" *ngIf="platform.width() < 768">
+            <swiper-container class="program-slides" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]="true" [updateOnWindowResize]="true" [slidesOffsetAfter]="this.platform.width() - 150"  *ngIf="platform.width() < 768">
               <swiper-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy" [hidden]="!((program.matrix_string[0][0].toLowerCase().includes(searchKeyword.toLowerCase()) || program.resource['en-US'].value[0].toLowerCase().includes(searchKeyword.toLowerCase())))">
                 <ion-card class="program-card" (click)="openProgram($event, program)">
                   <ion-card-header class="ion-no-padding">
