--- a/src/app/pages/connect/groupchat/groupchat.page.html
+++ b/src/app/pages/connect/groupchat/groupchat.page.html
@@ -533,7 +533,7 @@
   </ion-toolbar>
   <ion-toolbar id="expandable" *ngIf="moreOptions" class="ion-no-padding">
     <div class="moreoptions">
-      <swiper-container class="program-slides" [options]="{grabCursor: true}">
+      <swiper-container class="program-slides" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]="true" [updateOnWindowResize]="true">
         <swiper-slide class="program-slide" *ngFor="let calendarItem of calendarService.calendarItems.slice().reverse() | slice : 0 : 20; index as i; trackBy: customTrackBy" [hidden]="!((calendarItem.relationship ? (calendarItem.relationship === chatService.currentChatProps[this.propIndex].moment?._id) : true) && calendarItem.moment?.resource && calendarItem.moment.resource.field === 'User Defined Activity' && calendarItem.moment.resource['en-US'].value[0] !== 'Onboarding Process')">
           <ion-card class="program-card" (click)="selectCalendarItem($event, calendarItem)" *ngIf="calendarItem.moment">
             <ion-card-header class="ion-no-padding">
