--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -520,7 +520,7 @@
             <ion-item lines="none" class="ion-no-margin">
               <ion-label [ngStyle]="{'font-weight': ((moment.matrix_number[i].length > 4 && moment.matrix_number[i][4]) ? 'bold' : 'none')}">{{goal[5]}}</ion-label>
             </ion-item>
-            <swiper-container #lessonSlides class="lesson-slides" [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto', slidesOffsetAfter: this.platform.width() - 124, initialSlide: ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })}">
+            <swiper-container #lessonSlides class="lesson-slides" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]=true [updateOnWindowResize]=true [slidesOffsetAfter]="this.platform.width() - 124" [initialSlide]="((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'index', scheduleIds: scheduleIds, goal: goal })">
               <swiper-slide class="lesson-slide" *ngFor="let calendarItem of ((adminOrPublicAccessContentCalendars.length ? adminOrPublicAccessContentCalendars : calendarService.calendarItems) | calendar : 'extracttodayorincompletelesson' : { output: 'filteredcalendaritems', scheduleIds: scheduleIds, goal: goal }); index as i; trackBy: customTrackBy">
                 <ion-card class="lesson-card" (click)="openContent($event, calendarItem)">
                   <ion-card-content class="ion-no-padding ion-padding-top">
@@ -561,7 +561,7 @@
         <!--Slideshow and has two or more items-->
         <div *ngIf="moment.matrix_number[i][0] === 2 && moment.matrix_string[i]?.length > 1">
           <!--<div class="media-swiper-button-prev swiper-button-prev swiper-button-white" (click)="mediaSlides.slidePrev()" [hidden]="disableMediaPrevBtn || (this.platform.width() < 768)"></div>-->
-          <swiper-container #mediaSlides pager="true" [options]="mediaSlideOpts">
+          <swiper-container #mediaSlides pager="true" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]=true [updateOnWindowResize]=true [slidesOffsetAfter]="this.platform.width() - 150" >
             <swiper-slide *ngFor="let url of moment.matrix_string[i] | slice: ((item === 10010 || item === 40010) ? 11 : 0)" class="ion-justify-content-center">
               <ion-thumbnail class="photo-item" (click)="focusPhoto($event, url)" *ngIf="(['jpg', 'jpeg', 'gif', 'png']).includes(url.substring(url.lastIndexOf('.') + 1).toLowerCase())">
                 <ion-img [src]="url"></ion-img>
@@ -669,7 +669,7 @@
         </div>
       </div>
       <div class="component" *ngIf="item === 10370"> <!--References-->
-        <swiper-container class="program-slides" #plansSlides [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto'}">
+        <swiper-container class="program-slides" #plansSlides [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]=true [updateOnWindowResize]=true>
           <swiper-slide class="program-slide" *ngFor="let program of planModules; trackBy: customTrackBy">
             <ion-card class="program-card" (click)="openProgram($event, program)">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
               <ion-card-content class="ion-no-padding">
@@ -993,7 +993,7 @@
             <p>The Directory is Empty.</p>
           </ion-row>
           <div class="swiper-button-prev swiper-button-white" (click)="peopleSlides.slidePrev()" [hidden]="!matchedPeople.length || disablePrevBtn || this.platform.is('cordova') || this.platform.is('mobileweb')"></div>
-          <swiper-container class="person-slides" #peopleSlides (ionSlideDidChange)="swipePeopleSlide()" [options]="peopleSlidesOptions">
+          <swiper-container class="person-slides" #peopleSlides (ionSlideDidChange)="swipePeopleSlide()" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]=true [updateOnWindowResize]=true>
             <swiper-slide class="person-slide" *ngFor="let leader of moment.user_list_3" [hidden]="matchedPeople.length || !loadAPIBusy">
               <ion-card class="person-card">   <!--[ngStyle]="{'background-image': 'url(' + (activity.moment.assets?.length ? activity.moment.assets[0] : '') + ')'}"-->
                 <ion-card-header>
@@ -1112,7 +1112,7 @@
       <ion-item color="secondary" lines="none" class="section"> <!--Featured Section Header-->
         <ion-label color="dark" class="section-label">Featured</ion-label>
       </ion-item>
-      <swiper-container class="program-slides" #programsSlides (ionSlideDidChange)="swipeProgramslide($event)" [options]="{grabCursor: true, updateOnWindowResize: true, slidesPerView: 'auto'}">
+      <swiper-container class="program-slides" #programsSlides (ionSlideDidChange)="swipeProgramslide($event)" [slidesPerView]="'auto'" [spaceBetween]="10" [grabCursor]=true [updateOnWindowResize]=true>
         <swiper-slide class="program-slide" *ngFor="let program of programs; trackBy: customTrackBy">
           <ion-card class="program-card" (click)="openProgram($event, program)">
             <ion-card-header class="ion-no-padding">
